<resources>
    <string name="app_name">Socichat</string>
    <string name="resend"><u>Resend</u></string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code_for_login">Please Enter Your Mobile Number To Receive A Verification Code For Login</string>
    <string name="please_enter_4_digit_otp_wich_you_received_on_your_last_entered_mobile_number">Please Enter 4-Digit OTP Which You Received On Your Last Entered Mobile Number</string>
    <string name="requestfor_new_one_on_1_00_min">RequestFor new one on 1:00 Min.</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="verify">Verify</string>
    <string name="status">Status</string>
    <string name="chat">Chat</string>
    <string name="calls">calls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>