<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_verifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/leable_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/didn_t_receive_otp"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_verify" />

    <TextView
        android:id="@+id/leable_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/requestfor_new_one_on_1_00_min"
        android:textAlignment="inherit"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@+id/leable_text2"
        app:layout_constraintTop_toBottomOf="@+id/leable_text2" />

    <TextView
        android:id="@+id/btn_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/leable_text3"
        app:layout_constraintEnd_toEndOf="@+id/leable_text2"
        app:layout_constraintStart_toEndOf="@+id/leable_text3"
        app:layout_constraintTop_toTopOf="@+id/leable_text3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/headline_verifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mobile_verification"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_verifi" />

    <TextView
        android:id="@+id/leable_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/please_enter_4_digit_otp_wich_you_received_on_your_last_entered_mobile_number"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_verifi" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/edt_verific_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="4"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:pinBackgroundDrawable="@drawable/bg_pin"
        app:pinLineStroke="2dp"
        app:pinLineStrokeSelected="4dp"
        app:pinBackgroundIsSquare="true"
        android:layoutDirection="ltr"
        app:pinTextBottomPadding="@dimen/space"
        app:layout_constraintEnd_toEndOf="@+id/leable_text"
        app:layout_constraintStart_toStartOf="@+id/leable_text"
        app:layout_constraintTop_toBottomOf="@+id/leable_text"
        android:autofillHints=""
    />



    <Button
        android:id="@+id/btn_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="384dp"
        android:background="@color/colorPrimary"
        android:text="@string/verify"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_verific_code"
        app:layout_constraintStart_toStartOf="@+id/edt_verific_code"
        app:layout_constraintTop_toBottomOf="@+id/edt_verific_code" />
</androidx.constraintlayout.widget.ConstraintLayout>